// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NavItem icon 1`] = `
<span
  className={
    Object {
      "data-css-w0yocm": "",
    }
  }
>
  <div
    data-css-1ij5lym=""
  >
    <button
      data-css-1mpln1q=""
      icon={<HomeIcon />}
    >
      <span
        className={
          Object {
            "data-css-pfebor": "",
          }
        }
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="home icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M21 13.417l.989.988a.5.5 0 00.707 0l.707-.708a.5.5 0 000-.707L12.353 1.954a.5.5 0 00-.707 0L.61 12.99a.5.5 0 000 .707l.707.707a.5.5 0 00.707 0L3 13.428v7.573a1 1 0 001 1h5a1 1 0 001-1v-4a2 2 0 114 0v4a1 1 0 001 1h5a1 1 0 001-1v-7.584zM5 11.428l7-7 7 6.991v8.582h-3v-3a4 4 0 10-8 0v3H5v-8.573z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </span>
      <span
        className={
          Object {
            "data-css-1c3u483": "",
          }
        }
      >
        With icon
      </span>
    </button>
  </div>
  <div
    className={
      Object {
        "data-css-1pe8c3g": "",
      }
    }
  />
</span>
`;

exports[`Storyshots NavItem link 1`] = `
<span
  className={
    Object {
      "data-css-w0yocm": "",
    }
  }
>
  <div
    data-css-1ij5lym=""
  >
    <a
      data-css-1mpln1q=""
      href="https://jaketrent.com"
      icon={<HomeIcon />}
    >
      <span
        className={
          Object {
            "data-css-pfebor": "",
          }
        }
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="home icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M21 13.417l.989.988a.5.5 0 00.707 0l.707-.708a.5.5 0 000-.707L12.353 1.954a.5.5 0 00-.707 0L.61 12.99a.5.5 0 000 .707l.707.707a.5.5 0 00.707 0L3 13.428v7.573a1 1 0 001 1h5a1 1 0 001-1v-4a2 2 0 114 0v4a1 1 0 001 1h5a1 1 0 001-1v-7.584zM5 11.428l7-7 7 6.991v8.582h-3v-3a4 4 0 10-8 0v3H5v-8.573z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </span>
      <span
        className={
          Object {
            "data-css-1c3u483": "",
          }
        }
      >
        Link to web
      </span>
    </a>
  </div>
  <div
    className={
      Object {
        "data-css-1pe8c3g": "",
      }
    }
  />
</span>
`;

exports[`Storyshots NavItem menu 1`] = `
<span
  className={
    Object {
      "data-css-w0yocm": "",
    }
  }
>
  <div
    data-css-1ij5lym=""
  >
    <button
      data-css-1ekr6yp=""
    >
      <span
        className={
          Object {
            "data-css-1c3u483": "",
          }
        }
      >
        With menu
      </span>
      <span
        className={
          Object {
            "data-css-1cbyl54": "",
          }
        }
      >
        <div
          data-css-1gzzcm2=""
        >
          <svg
            aria-label="caret down icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
            />
          </svg>
        </div>
      </span>
    </button>
  </div>
  <div
    className={
      Object {
        "data-css-1pe8c3g": "",
      }
    }
  />
</span>
`;

exports[`Storyshots NavItem selected 1`] = `
<span
  className={
    Object {
      "data-css-w0yocm": "",
    }
  }
>
  <div
    data-css-1ij5lym=""
  >
    <button
      data-css-1mpln1q=""
      icon={<HomeIcon />}
    >
      <span
        className={
          Object {
            "data-css-pfebor": "",
          }
        }
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="home icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M21 13.417l.989.988a.5.5 0 00.707 0l.707-.708a.5.5 0 000-.707L12.353 1.954a.5.5 0 00-.707 0L.61 12.99a.5.5 0 000 .707l.707.707a.5.5 0 00.707 0L3 13.428v7.573a1 1 0 001 1h5a1 1 0 001-1v-4a2 2 0 114 0v4a1 1 0 001 1h5a1 1 0 001-1v-7.584zM5 11.428l7-7 7 6.991v8.582h-3v-3a4 4 0 10-8 0v3H5v-8.573z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </span>
      <span
        className={
          Object {
            "data-css-1c3u483": "",
          }
        }
      >
        Selected
      </span>
    </button>
  </div>
  <div
    className={
      Object {
        "data-css-1x5c7ce": "",
      }
    }
  />
</span>
`;

exports[`Storyshots NavItem text only 1`] = `
<span
  className={
    Object {
      "data-css-w0yocm": "",
    }
  }
>
  <div
    data-css-1ij5lym=""
  >
    <button
      data-css-1mpln1q=""
    >
      <span
        className={
          Object {
            "data-css-1c3u483": "",
          }
        }
      >
        Text only
      </span>
    </button>
  </div>
  <div
    className={
      Object {
        "data-css-1pe8c3g": "",
      }
    }
  />
</span>
`;
